fixed size on mobile

--- a/_harp/main.less
+++ b/_harp/main.less
@@ -15,7 +15,7 @@ body {
 
 #console {
   font-family: 'UbuntuMono-R';
-  font-size: 300%;
+  font-size: 120%;
   padding: 1%;
   background: @console-bg;
   color: @console-text;
